labs/examples/design-patterns-examples/src/com/examples/design/solid/i/good/IWorker.java
package com.examples.design.solid.i.good;

// interface segregation principle - good example
public interface IWorker extends IFeedable, IWorkable {
}












