labs/examples/design-patterns-examples/src/com/examples/design/solid/i/bad/IWorker.java
package com.examples.design.solid.i.bad;

// interface segregation principle - bad example
public interface IWorker {
    public void work();
    public void eat();
}
